--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -68,7 +68,6 @@ body {
   padding: 1rem 1rem 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
   color: var(--text-color);
  overflow-y: auto;
 }
@@ -369,7 +368,7 @@ img {
   width: 102%;
   height: 550px;
   border-radius: 5px;
-  background-color: var(--card-color); 
+  background-color: #E9E4D4; 
   float: center;
   margin-top: 10px;
   margin-bottom: 35px;
@@ -506,12 +505,11 @@ img {
         <!--========== CONTENTS NOTIFICATION ==========-->
         <div class="divHome">
             <section id="notif" >
-                <br>
-                <div class="card1">
-  <!-- KUHAA ANG CARD1 ESAME NYA SA DIRECTOR -->
+
+
          {% block content %} 
 
-           <!-- <h1 style="font-weight: bold; text-align: left; margin-left: 10px;font-size: 30px" class="txtColor">Admin</h1> -->
+          
      <br>    
 <div style="margin-left: 13px; float: left; line-height: 30px;" >
   <p><h4>
@@ -526,7 +524,7 @@ img {
  >
 
            {% endblock %}  
-         </div>
+     
                </section>
             </div> 
    
