--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -83,7 +83,7 @@ color: #64748B;
 
 .card-link{
 font-size: 12px;
-color: #4F46E5;
+color: #d8c090;
 }
 /* === TABLE ==== */
 .table-box
@@ -199,62 +199,38 @@ justify-content: center;
 }
 
 .buttonF {
-width: 450px;
-height: 55px;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
 color: #fff;
-background-color: #4863A0;
+background-color: #d8c090;
 border: none;
-border-radius: 45px;
+border-radius: 8px;
 box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
-.facU{
 
-display: flex;
-align-items: center;
-justify-content: center;
 
-}
-
-.buttonN {
-width: 280px;
-height: 40px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-font-size: 13px;
-}
 </style>
-
+<br>
   <div class="table-cont">
         <div class="fac">
           <button type="submit" class="buttonF">List of Pending Referred Students</button>
         </div>   
         <br>
-{% if not objects %}
-<div class="facU">
-  <button type="submit" class="buttonN">No Pending Referrals Yet!</button>
-</div> 
-{% endif %}
 
-<table class="table" style="color: #4863A0;">
+
+
+<table class="table">
 <thead>
 <tr>
 <th>ID Number</th>
@@ -262,11 +238,9 @@ font-size: 13px;
 <th>Date</th>
 <th>Status</th>
 <th>Information</th>
-
-
-
 </tr>
 </thead>
+
 <br>
 
 {% for object in objects  reversed %}
@@ -286,6 +260,11 @@ font-size: 13px;
 
 {%endfor %}
 </table>
+         {% if not objects %}
+   <center><b><p>No Pending Referrals Yet!</p></b></center>
+        {% endif %}
+        <br>
 </div>
+
 
 {% endblock %}
