--- a/templates/counselor/schedule.html
+++ b/templates/counselor/schedule.html
@@ -5,6 +5,7 @@ Schedule
 {% endblock %} 
 
 {% block content %} 
+
 <style>
 
 div.table-title {
@@ -146,32 +147,7 @@ td.text-center {
 td.text-right {
   text-align: right;
 }
-.fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonF {
-width: 350px;
-height: 45px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
-  .facDay{
+.facDay{
   
   display: flex;
   align-items: left;
@@ -180,7 +156,7 @@ outline: none;
   }
   
   .buttonDay {
-  width: 300px;
+  width: 320px;
   height: 55px;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
@@ -188,28 +164,57 @@ outline: none;
   letter-spacing: 2.5px;
   font-weight: 600;
   color: #fff;
-  background-color: #4863A0;
+  background-color: #d8c090;
   border: none;
-  border-radius: 45px;
+  border-radius: 8px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
   margin-left: 10px;
   }
-  </style>
-  <br>
-    <div class="facDay">
-    <button type="submit" class="buttonDay">{{today}},  {{day_name}}</button>
-  </div> 
-  <br>
+  .fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
 
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+
+
+
+  </style>
+    <div class="fac">
+      <button type="submit" class="buttonF">{{today}},  {{day_name}}</button>
+    </div> 
+    <br>
+<br>
   <a style="color: #504A4B" 
   href="{% url 'counselor_view_another_sched' 1 %}"> 
-           <div class="fac">
-          <button type="submit" class="buttonF">Click here to view next day</button>
+           <div class="facDay">
+          <button type="submit" class="buttonDay">Click here to view next day</button>
         </div> 
 </a> 
+<br>
 
  
    <br> <br>
