--- a/templates/counselor/view_feedback.html
+++ b/templates/counselor/view_feedback.html
@@ -5,6 +5,7 @@ View Feedback
 {% endblock %} 
 
 {% block content %} 
+
 <style>
    
   .center {
@@ -190,71 +191,41 @@ margin-left: 15px;
 }
 
 .fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.facU{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonN {
-width: 280px;
-height: 40px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-width: 420px;
-height: 55px;
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
 color: #fff;
-background-color: #4863A0;
+background-color: #d8c090;
 border: none;
-border-radius: 45px;
+border-radius: 8px;
 box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-}
+  }
 
 </style>
 
   <div class="table-cont">
-        <div class="fac">
+               <div class="fac">
           <button type="submit" class="buttonF">List of Feedbacks</button>
         </div> 
-     {% if not student %}
-     <br>
-<div class="facU">
-  <button type="submit" class="buttonN">No Feedbacks Yet!</button>
-</div> 
-{% endif %}
-  <table class="table" style="color: #4863A0;">
+  <br>  
+
+  <table class="table">
   <thead>
   <tr>
 
@@ -284,6 +255,9 @@ outline: none;
   
   {%endfor %}
   </table>
+       {% if not student %}
+<center><b><p>No Feedbacks Yet!</p></b></center>
+{% endif %}
   </div>
   
   {% endblock %}
