--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -41,7 +41,7 @@
   --text-color-light: #A5A1AA;
   --body-color: #d8c090;
   --nav-color: #98b4ac;
-  --container-color: #FFFFFF;
+  --container-color: #E9E4D4;
   --card-color: #F9F6FD;
   --main1-color: #d8c090;
   --dropdown: #4863A0;
@@ -79,7 +79,6 @@ body {
   padding: 1rem 1rem 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
   color: var(--text-color);
 overflow-y: auto;
 }
@@ -644,17 +643,12 @@ th, td {
               
 
             <section id="homie" >
-
-                <br>
-                <div class="card1">
-
-           <br>
           {% block content %} 
 
           <div style="display: flex;flex-direction:row;
           flex-wrap:wrap-reverse;">
                <img style="max-width: 1000px;
-     height: 480px; margin: auto;" 
+     height: 485px; margin: auto; padding: 10px;" 
      src="https://epsyclinic.com/assets/img/intro-mobile.png"  
     >
     <div style="margin: auto; float: center; line-height: 30px;" >
@@ -669,7 +663,7 @@ th, td {
    </div>
    </div>
            {% endblock %}
-         </div>
+         
                </section>
             </div>
 
