--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -26,7 +26,7 @@
   --text-color-light: #A5A1AA;
   --body-color: #d8c090;
   --nav-color: #98b4ac;
-  --container-color: #FFFFFF;
+  --container-color: #E9E4D4;
   --card-color: #F9F6FD;
   --main1-color: #d8c090;
   --dropdown: #4863A0;
@@ -66,7 +66,6 @@ body {
   padding: 1rem 1rem 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
   color: var(--text-color);
  overflow-y: auto;
 }
@@ -362,12 +361,12 @@ img {
 }
 /*===== CARD CARD CARD =====*/
 .homeCard {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(2, 2, 2, 0.2);
   transition: 0.3s;
   width: 102%;
-  height: 840px;
+  height: 700px;
   border-radius: 5px;
-  background-color: var(--card-color); 
+  background-color:var(--container-color);
   float: center;
   margin-top: 10px;
   margin-bottom: 35px;
@@ -375,8 +374,7 @@ img {
   /* margin-left: 80px;  */
   text-align: center;
   overflow-y: scroll;
-  overflow-x: scroll;
-  
+  overflow-x: scroll; 
 }
 
 
@@ -688,8 +686,11 @@ justify-content: center;
 }
 
 .buttonF {
-width: 420px;
-height: 55px;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
@@ -703,6 +704,7 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
+
 }
 
   </style>
@@ -715,12 +717,12 @@ outline: none;
                
  
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold; margin-right: auto;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right: auto; color: #FFFFFF; "href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
              
 
                 <div>
                        
-                              <p style="font-weight: bold;"> {{form.firstname }} {{form.lastname }} </p>
+                              <p style="font-weight: bold;color: #FFFFFF; "> {{form.firstname }} {{form.lastname }} </p>
                                   
                                    </div>
               </div>
@@ -758,7 +760,7 @@ outline: none;
             </nav>
         </div>
               
-                <div class="homeCard custom-scrollbar">
+                <div class="custom-scrollbar">
                 <br>
                   {% block content %} 
                
@@ -768,12 +770,10 @@ outline: none;
                   </div> 
               
 
-      <br>
+      <br> <br>
 
       {% if not object_list %}
-    <div class="facU"> 
-  <button class="buttonN">No Subjects Yet!</button>
-</div> 
+<center><p><b>No Subjects Yet!</b></p></center>
 {% endif %}
       <div class="cards" >
 
