--- a/templates/admin/depachoice.html
+++ b/templates/admin/depachoice.html
@@ -87,32 +87,32 @@ Schedule
     color: #fff;
   }
   .fac{
-  height: 20%;
   display: flex;
-  align-items: left;
-  justify-content: left;
-  padding: 15px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-  width: 250px;
-  height: 45px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-  font-family: var(--body-font);
-  font-size: 15px;
-  font-weight: bold;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+
   }
 
     </style>
@@ -121,6 +121,7 @@ Schedule
 <div class="fac">
   <button type="submit" class="buttonF"><b>DEPARTMENT</b></button>
 </div> 
+<br> <br>
 <div class="depachoice">
   <form method="POST" action="">
     {% csrf_token %}
