--- a/templates/admin/uploaddb_counselor.html
+++ b/templates/admin/uploaddb_counselor.html
@@ -27,7 +27,7 @@
   width: 140px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
@@ -48,52 +48,56 @@
   transform: translateY(-7px);
 }
 
-  .fac{
-  height: 20%;
+.fac{
   display: flex;
-  align-items: left;
-  justify-content: left;
-  padding: 15px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-  width: 250px;
-  height: 45px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+  .input{
+    margin: 0 auto;
+  height: 30px;
   font-weight: 500;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-  font-family: var(--body-font);
-  font-size: 12.5px;
   }
 </style>
+<div class="fac">
+  <button type="submit" class="buttonF"><b>Upload Counselor</b></button>
+</div> 
 <br> <br> <br> <br>
 <div class="faculty">
-  <div class="fac">
-    <button type="submit" class="buttonF"><b>Upload Counselor</b></button>
-  </div> 
 <br>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="file" name="myfile" style="float: center;">
+    <center><input type="file" name="myfile" class="input"></center>
    <br> <br>
     <div class="wrap">
       <button type="submit" class="button">Upload</button>
     </div>
   </form>
   {% for message in messages %}
-  <center> <b><p>{{message}} !</p></b> </center>   
-             
-{% endfor %}
+  <center> <b><p>{{message}} !</p></b> </center>
+{% endfor %}  
                 
 </div>
   {% endblock %}
