--- a/templates/admin/viewoffering.html
+++ b/templates/admin/viewoffering.html
@@ -118,32 +118,32 @@ View Offer
     }
 }
 .fac{
-  height: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px;
+  padding: 20px;
 }
 
 .buttonF {
-  width: 250px;
-  height: 45px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 800;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-  margin: auto;
-  font-size: 13px;
-  padding: auto;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+
   }
 </style>
     
@@ -151,6 +151,7 @@ View Offer
 <div class="fac">
     <button type="submit" class="buttonF">List of Offerings</button>
   </div> 
+  <br> <br>
 <div class="table-wrapper">
   <table class="fl-table">
       <thead>
@@ -178,7 +179,7 @@ View Offer
         {% endfor %}
   </table>
   {% if not forms %}
-<p><b>No Data AVailable</b></p>
+<center><p><b>No Data Available</b></p></center>
 {% endif %}
 </div>
 
