--- a/templates/counselor/another_sched.html
+++ b/templates/counselor/another_sched.html
@@ -5,6 +5,7 @@ Schedule
 {% endblock %} 
 
 {% block content %} 
+
 <style>
 
 div.table-title {
@@ -146,33 +147,7 @@ td.text-center {
 td.text-right {
   text-align: right;
 }
-
-.fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonF {
-width: 350px;
-height: 45px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
-  .facDay{
+.facDay{
   
   display: flex;
   align-items: left;
@@ -181,7 +156,7 @@ outline: none;
   }
   
   .buttonDay {
-  width: 300px;
+  width: 320px;
   height: 55px;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
@@ -189,34 +164,68 @@ outline: none;
   letter-spacing: 2.5px;
   font-weight: 600;
   color: #fff;
-  background-color: #4863A0;
+  background-color: #d8c090;
   border: none;
-  border-radius: 45px;
+  border-radius: 8px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
   margin-left: 10px;
   }
+  .fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+
+
+
   </style>
-  <br>
-    <div class="facDay">
-    <button type="submit" class="buttonDay">{{today}},  {{day_name}}</button>
-  </div> 
+    <div class="fac">
+      <button type="submit" class="buttonF">{{today}},  {{day_name}}</button>
+    </div> 
+    <br>
+<br>
   <a style="color: #504A4B" 
   href="{% url 'counselor_view_another_sched' 1 %}"> 
-           <div class="fac">
-          <button type="submit" class="buttonF">Click here to view next day</button>
+           <div class="facDay">
+          <button type="submit" class="buttonDay">Click here to view next day</button>
         </div> 
 </a> 
-
 <br>
+
+ 
+   <br> <br>
+  <!-- //KANI WALAPA -->
 
     <table class="table-fill">
     <thead style="height: 20px;">
     <tr>
     <th class="text-left">Time</th>
-    <th class="text-left">Service</th>
+    <th class="text-left">Action</th>
+    <th class="text-left">Subject Code</th>
     <th class="text-left">Information</th>
     </tr>
     </thead>
@@ -232,9 +241,10 @@ outline: none;
             {% endif %} 
             {% for object in schedForToday %}
             {% if obj|stringformat:"s" == object.start_time|stringformat:"s" %}
-       <td>{{object.choice}} {{object.offer_code}} {{object.subject_code}}</td>
+            <td>{{object.choice}}</td>
+            <td>{{object.subject_code}} - {{object.offer_code}}</td> 
             {% if object.choice|stringformat:"s" == "Class" %} 
-             {% else %} 
+        {% else %} 
   <td data-label="Info"><a style="color: #504A4B" href="{% url 'counselor_detail_schedule_counseling' object.start_time object.end_time object.date %}"><b>View More Information</b></a> <br></td>
   
   {% endif %} 
