--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -16,19 +16,20 @@
   --nav-width: 250px;
 
   /*========== Colors ==========*/
- --first-color: #d8c090;
+  --first-color: #4863A0;
   --first-color-light: #F4F0FA;
   --title-color: #19181B;
   --text-color: #58555E;
   --navtext-color: #FFFFFF;
   --text-color-light: #A5A1AA;
-  --body-color: #E5E4E2;
-  --nav-color: #4863A0;
+  --body-color: #d8c090;
+  --nav-color: #98b4ac;
   --container-color: #FFFFFF;
-  --card-color: #F9F6FD;
+  --card-color: #E9E4D4;
   --main1-color: #d8c090;
   --dropdown: #4863A0;
-  --header-color: #FFFFFF;
+  --header-color: #98b4ac;
+
 
 
   /*========== Font and typography ==========*/
@@ -63,7 +64,6 @@ body {
   padding: 1rem 1rem 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
   color: var(--text-color);
  overflow-y: auto;
 }
@@ -569,11 +569,11 @@ th, td {
     <header class="header">
             <div class="header__container">
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold; margin-right:  auto;" href="{% url 'counselor_home_view' %}"  class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right:  auto; color: #FFFFFF; " href="{% url 'counselor_home_view' %}"  class="header__logo">FOLLOW APP</a>
              
 
                 <div>
-                              <p style="font-weight: bold;"> {{form.firstname }} {{form.lastname }} </p>
+                              <p style="font-weight: bold; color: #FFFFFF; "> {{form.firstname }} {{form.lastname }} </p>
                                 
                                    </div>
               </div>
@@ -636,9 +636,9 @@ th, td {
         <!--========== CONTENTS NOTIFICATION ==========-->
         <div class="divHome">
             <section id="notif" >
-                <br>
-                <div class="card1">
-           <br>           
+   
+              
+        
            {% block content %} 
  <div style="display: flex;flex-direction:row;
        flex-wrap:wrap-reverse;">
@@ -662,7 +662,7 @@ th, td {
  >
 </div>
            {% endblock %}
-         </div>
+     
                </section>
             </div> 
 
