--- a/templates/counselor/detail_feedback.html
+++ b/templates/counselor/detail_feedback.html
@@ -19,7 +19,7 @@ Schedule
 
   border: 1px solid black;
   border-radius: 10px;
-      background-color: #B4CFEC;
+      background-color: #98b4ac;
       box-shadow:
         0 9px 33px rgba(0, 0, 0, 0.07);
   margin: auto;
@@ -27,144 +27,20 @@ Schedule
 }
 
 #box {
-
+  
   border: 1px solid black;
-  border-radius: 10px;
-      background-color: #B4CFEC;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-        min-width: 800px;
-  height: 350px;
-  float: center;
-  margin: auto;
-      overflow-y: scroll;
-    overflow: hidden;
-  text-overflow: ellipsis;
-  
-  overflow-wrap: break-word;
-}
-.Pbox{
-  font-size: 19px;
-  line-height: 30px;
-  text-align: justify;
+border-radius: 10px;
 
-}
-/* === TABLE ==== */
-
-/* .table-row{
-    display: table;
-    width: 40%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 4px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    height: 0.1%;
-    border-radius: 20px;
-    margin-top: 50px;
-     
-} */
-.table-head{
-  
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    line-height: 5px;
-      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-      width: 500px;
-      margin: auto;
-      border-radius: 20px;
-}
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #838996;
-    vertical-align: middle;
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 8%;
-}
-.last-cell{
-    border-right: none;
-    width: 15px;
-}
-/* a{
-    textdecoration: none;
-    color: #555;
-} */
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 20px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
-    margin: auto;
-  }
-}
-.trow-list{
-      display:inline-block;
-    width: 70%;
-   
-    font-family: sans-serif;
-    background: transparent;
-    padding: 10px 0;
-    margin: auto;
- 
-
-
-}
-.modal1{
-  font-size: 22px;
-  font-weight: 300;
-  text-align: left;
-  margin-left: auto;
-}
-.modal2{
-  font-size: 21px;
-  text-align: left;
-}
-div.item {
-
-    vertical-align: auto;
-    display: inline-block;
-
-    text-align: center;
-
-    width: 120px;
-}
-
-.caption {
-
-    display: block;
-}
-.item{
-  width:200px;
-  text-align:center;
-  display:block;
-  background-color: transparent;
-  border: 1px solid transparent;
-  margin-right: 10px;
-  margin-bottom: 1px;
-  float:left;
-}
-
-#index-gallery{
-  width:465px;
+    box-shadow:
+      0 9px 33px rgba(0, 0, 0, 0.07);
+      min-width: 1008px;
+min-height: 100px;
+float: left;
+margin: auto;
+display: flex;
+flex-direction: row;
+overflow: hidden;
+white-space:normal; word-break: break-all;
 }
 .fac{
 
@@ -183,7 +59,6 @@ margin-left: 40px;
 text-align: left;
 white-space: normal;
 
-
 }
 
 .buttonF {
@@ -195,49 +70,164 @@ text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
 color: #fff;
-background-color: #4863A0;
+background-color: #d8c090;
 border: none;
-border-radius: 45px;
+border-radius: 8px;
 box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
+.Pbox{
+  font-size: 19px;
+  line-height: 30px;
+  text-align: justify;
 
+}
+.column{
+ min-width: 300px;
+ float:left;
+ margin-right:20px;
+}
+.row{
+  width: 500px;
+ float:right;
+ text-align: left;
+ text-align: justify;
+  flex-direction: column-reverse;
+  padding: 8px;
+  margin-left: auto;
+ padding: 10px; 
+  line-height: 30px;
+  
+}
+.rowText{
+  font-size: 23px;
+  min-width: 900px;
+  padding: 10px;
+}
+.image{
+  max-width: 320px;
+  height: 150px; 
+}
+.picInfo{
+  display: flex;
+justify-content: center;
+}
+.column{
+ width:250px;
+ float:left;
+ margin-right:20px;
+
+}
+
+.row1{
+ width: 450px;
+ float:left;
+margin-left: 200px;
+padding-top: 17px;
+
+}
+
+
+.last{
+ margin:0;
+ padding: 10px;   
+}
+.pText{
+  font-weight: 600;
+  font-size: 20px;
+}
+.bText{
+  color: #000;
+  font-size: 20px;
+}
+
+form.cleanForm {
+width:700px;
+margin:0 auto;
+
+}
+form.cleanForm p {
+margin-bottom:15px;
+}
+.fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
 </style>
 
+<div class="fac">
+  <button type="submit" class="buttonF">Feedback Information</button>
+</div>
+<br> 
 
-  <div id="wrapper">
-    {% for object in student %}
-    <div id="square">
-      <br>
+
+{% for object in student %}
+<br> 
+<div class="card1">
+  <form action="#" class="cleanForm" method="POST">
+    <br>
     
-        
-          <img style="max-width: 200px;
-          height: 200px; margin: auto;" 
-          src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
-         >
-         <p style="padding: 10px; font-size: 17px;"><b>Students Name:</b> {{object.lastname}}, {{object.firstname}}</p>
-         <p style="line-height: 1px; font-size: 17px;"><b>ID Number:</b>  {{object.studnumber}}</p>
-     
-  
-    </div>
-  
+    <div class="column">
+    <div class="row">  
+    <img class="image"
+    src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
+    > 
+    <br>
+    <p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
+    <p class="pText"><b class="bText">Students ID Number: &nbsp;</b>{{object.studnumber}}</p>
+    
+    
+    
+    <div>
+    <p class="rowText">
+  <b>Feedback stated below</b>
     <div id="box">
-  
-      <br>        
-      <div class="fac">
-        <button type="submit" class="buttonF">Feedback</button>
-      </div> 
-  
+    <li style="font-size: 21px; padding: 10px;"><b>{{object.feedback}}</b></li>
+    </div>
+    </p>
+    </div>
+    
 
-            <div class="trow-list">
-        <p class="Pbox">
-        {{object.feedback}}
-        </p>
-      </div>
-     </div>
+    </div>
+    </div>
+    <br> <br> <br> <br> <br> <br> <br> <br> 
+    
+    <div class="column">
+    <div class="row1"> 
+    <p class="pText"><b class="bText">Degree Program: &nbsp;</b>{{object.degree_program}}</p>
+    &nbsp;    &nbsp;   
+    </div>
+    
+    </div>
+    
+    </form>
+    
+</div>
+
      {% endfor %}
-  </div>
 {% endblock %}
 
