--- a/templates/counselor/feedback_student.html
+++ b/templates/counselor/feedback_student.html
@@ -102,7 +102,7 @@ margin-bottom:15px;
   font-size: 16px;
   -webkit-transform: translate(0);
   transform: translate(0);
-  background-image: linear-gradient(45deg, #98b4ac, #4863A0);
+  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
   padding: 0.7em 2em;
   border-radius: 65px;
   box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
@@ -113,7 +113,7 @@ margin-bottom:15px;
 .buttons .text {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #4863A0, #98b4ac);
+  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
 }
 
 .buttons:after {
@@ -130,39 +130,14 @@ margin-bottom:15px;
 }
 
 .buttons:hover {
-  background-image: linear-gradient(-45deg, #98b4ac, #4863A0);
+  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
   box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
 }
 
 .buttons:hover .text {
-  background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
-}
-.fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
+  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
 }
 
-.buttonF {
-  padding: 18px;
-width: 420px;
-height: 55px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
   </style>
   
 <!-- 
@@ -174,14 +149,16 @@ outline: none;
 <br>
 <br>   
 
+<div class="card1">
+  
   <form action="#" class="cleanForm" method="POST">
 
 
-    <div class="fac">
+    
           {% for message in messages %}
-     <p class="buttonF">{{message}} !</p>
+    <center><b> <p>{{message}} !</p></b></center>
      {% endfor %}
-    </div>
+  
 
         <div class="column">
           <div class="row">     
@@ -218,5 +195,6 @@ outline: none;
         
     </form>
 
+</div>
    
 {% endblock %}
