--- a/templates/director/assign_counselor.html
+++ b/templates/director/assign_counselor.html
@@ -4,49 +4,85 @@
 Assign Counselor
 {% endblock %} 
 
-{% block content %} 
+{% block content %}
 <style>
-       .card{
-      display: flex;
-      padding: 20px;
-      max-width: 408px;
-   padding-left: 5px;
-      height: 210px;
-      margin: 20px;
-      border-radius: 10px;
-      background-color: #98b4ac;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-      overflow-y: scroll;
-      float: left;
-      flex-wrap: row;
-      margin-left: 140px;
-      align-items: stretch;
-     
-      
-      
-      
-    }
-.txtFont{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; margin-right: 30px; 
-  display: flex;
-  font-size: 17px;
-  text-overflow: ellipsis;
-  align-items: start;
+.faculty{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 50%;
+  height: 320px;
+  border-radius: 5px;
+  background-color: #98b4ac;
+  float: center;
+  margin: auto;
+   line-height: 40px; 
 }
-.txtFonty{
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  text-align:left; 
+.wrap {
+  height: 100%;
   display: flex;
-  font-size: 17px; margin-left: 10px;
-  text-overflow: ellipsis;
-  margin-top: 8px;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
+  margin: auto;
 }
+
+.button {
+  margin: 0 auto;
+  width: 140px;
+  height: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: #95B9C7;
+  box-shadow: 0px 15px 20px #C9C0BB;
+  color: #fff;
+  transform: translateY(-7px);
+}
+.fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.buttonF {
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+  .input{
+    margin: 0 auto;
+  height: 30px;
+  font-weight: 500;
+  }
+
 /* === TABLE ==== */
 .table-box
 {
@@ -130,45 +166,12 @@ p{
     line-height: 0.1px;
     
 }
-.fac{
 
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonF {
-  padding: 13px;
-width: 445px;
-height: 45px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-margin: auto;
-}
 </style>
 
- <section id="assignedC">
-
-     <div class="card1">
-          <br>
-     <div class="cards" >
-    
-      <div class="fac">
-        <button type="submit" class="buttonF">List of Counselors</button>
-      </div> 
-
+<div class="fac">
+  <button type="submit" class="buttonF">List of Counselors</button>
+</div> 
 <div class="table-box">
   {% for object in object_list %}
   <a href="{% url 'director_fillinForm' object.employee_id %}"> 
@@ -184,10 +187,6 @@ margin: auto;
 
 {% endfor %} 
 </div>
-    
-  </div>
-</div>
-     </div>
- </section>
+
 
 {% endblock %}
