--- a/templates/director/director_home.html
+++ b/templates/director/director_home.html
@@ -68,7 +68,6 @@ body {
   padding: 1rem 1rem 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
   color: var(--text-color);
  overflow-y: auto;
 }
@@ -362,25 +361,6 @@ img {
   }
 }
 /*===== CARD CARD CARD =====*/
-.card1 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 98%;
-  height: 500px;
-  border-radius: 5px;
-  background-color: var(--container-color); 
-  float: center;
-  margin-top: 2px;
-  margin-bottom: 10px;
-  margin-right: 90px;
-  margin-left: 25px;
-  text-align: center;
-
-}
-
-.card1:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
 
 .card2 {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -450,24 +430,20 @@ img {
   margin: 0 auto;
 }
 
-         .dHome{
+       .dHome{
       display: flex;
       padding: 20px;
-      /* min-width: 20px; */
-  width: 85%;
+      width: 1200px;
+   padding-left: 5px;
       min-height: 500px;
-     
       border-radius: 10px;
       background-color: #FFFFFF;
       box-shadow:
         0 9px 33px rgba(0, 0, 0, 0.07);
-    
       float: center;
-    
-      margin: auto;
-
-    
-      
+      flex-wrap: row;
+      margin-left: auto;
+ float: center;
     }
     </style>
 
@@ -523,30 +499,33 @@ img {
         </div>
 
         <!--========== CONTENTS HOME ==========-->
-            <div class="divHome">
+          
             <section id="homie" >
-              <br>
            {% block content %} 
             <!-- E TRY CAROSEL NGANHI -->
-<div class="dHome">
-<div style="flex-direction: row; display: flex;">
+
+<div style="flex-direction: row; display: flex; padding: 10px;">
     <div style="margin-left: 13px; float: left; line-height: 30px;" >
-  <p><h4>
-   Director assigns the Cunselors to what Department they belong. <br>
+  <p><h4> 
+    month {{stat_month}} <br>
+    today {{stat_day}}<br>
+    year {{stat_year}}<br>
+    Statistic for this month charot ambot oy basta mao ni sya tung number of referes student karun nga month
+  There are <b>{{stat_month}}</b> refereed student this month<br>
    <i>"Director is the heart of the bahog baba"
                              - Rawr </i>
   </h4></p>
 </div>
-<br>
+<br> 
 <img style="max-width: 700px;
   height: 480px; margin: auto;" 
   src="https://static.e-counseling.com/wp-content/uploads/2020/04/online-counseling-illustration-750.png"  
  >
 </div>
-</div>
+
 
            {% endblock %}  
-         </div>
+       
                </section>
             <!-- </div> -->
 
