--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -49,7 +49,7 @@ margin: auto;
   width: 140px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
@@ -71,17 +71,17 @@ margin: auto;
   transform: translateY(-7px);
 }
 .fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-  padding: 13px;
-width: 300px;
-height: 45px;
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
@@ -95,58 +95,27 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-margin: auto;
-}
+  }
 #id_program_designation{
   width: 95px;
 }
-.facU{
 
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonFU {
-padding: auto;
-width: 400px;
-height: 35px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-margin: auto;
-
-}
 .bText{
   color: #fff;
 }
 </style>
- <section id="assignedC">
 
-     <div class="card1">
-          <br>
+<div class="fac">
+  <button type="submit" class="buttonF">Assign Employee</button>
+</div> 
 <form class="reffer" method="POST" action="">
   {% csrf_token %}
   <!-- SEARCH BAR NI -->
 
   <div class="input">
-    <div class="fac">
-      <button type="submit" class="buttonF">Assign Employee</button>
-    </div> 
 <br>
 {% for message in messages %}    
-<center><b><p>{{message}}</p></b></center>
+<center><p><b>{{message}} !</b></p></center>
 {% endfor %}
 <br>
 <div class="offering">
@@ -172,8 +141,7 @@ margin: auto;
 
   </div>
 </form>
-  </div>
- </section>
+
 
 
 {% endblock %}
