--- a/templates/student/add_info.html
+++ b/templates/student/add_info.html
@@ -1,9 +1,314 @@
- {% extends "student/student_home.html" %}
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block title %} 
-Student Info
-{% endblock %} 
+        <!--========== BOX ICONS ==========-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+        <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Sawarabi Gothic">
 
+        <!--========== CSS ==========-->
+        <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
+        <style>
+            /*========== GOOGLE FONTS ==========*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
+/*========== VARIABLES CSS ==========*/
+:root {
+  --header-height: 3.5rem;
+  --nav-width: 250px;
+
+  /*========== Colors ==========*/
+  --first-color: #4863A0;
+  --first-color-light: #F4F0FA;
+  --title-color: #19181B;
+  --text-color: #58555E;
+  --navtext-color: #FFFFFF;
+  --text-color-light: #A5A1AA;
+  --body-color: #d8c090;
+  --nav-color: #98b4ac;
+  --container-color: #FFFFFF;
+  --card-color: #F9F6FD;
+  --main1-color: #d8c090;
+  --dropdown: #4863A0;
+  --header-color: #98b4ac;
+
+
+  /*========== Font and typography ==========*/
+  --body-font: 'Poppins', sans-serif;
+  --normal-font-size: .938rem;
+  --small-font-size: .75rem;
+  --smaller-font-size: .75rem;
+
+  /*========== Font weight ==========*/
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /*========== z index ==========*/
+  --z-fixed: 100;
+}
+
+@media screen and (min-width: 1024px) {
+  :root {
+    --normal-font-size: 1rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+  }
+}
+
+/*========== BASE ==========*/
+*, ::before, ::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: var(--header-height) 0 0 0;
+  padding: 1rem 1rem 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  color: var(--text-color);
+ overflow-y: auto;
+}
+
+h3 {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 10%;
+  height: auto;
+}
+
+/*========== HEADER ==========*/
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--header-color);
+  box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
+  padding: 0 1rem;
+  z-index: var(--z-fixed);
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  height: var(--header-height);
+  justify-content: space-between;
+}
+
+.header__img {
+  width: 35px;
+  height: 35px;
+  border-radius: 5%;
+}
+
+.header__logo {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  display: none;
+}
+
+.header__search {
+  display: flex;
+  padding: .40rem .75rem;
+  background-color: var(--body-color);
+  border-radius: .25rem;
+  margin-left: 15px;
+}
+
+.header__input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: var(--body-color);
+}
+
+.header__input::placeholder {
+  font-family: var(--body-font);
+  color: var(--text-color);
+}
+
+.header__icon, 
+.header__toggle {
+  font-size: 1.5rem;
+}
+
+.header__toggle {
+  color: var(--title-color);
+  cursor: pointer;
+}
+
+/*===== Show menu =====*/
+.show-menu {
+  left: 0;
+}
+
+/*===== Active link =====*/
+.active {
+  color: var(--first-color);
+}
+
+/* ========== MEDIA QUERIES ==========*/
+/* For small devices reduce search*/
+@media screen and (max-width: 320px) {
+  .header__search {
+    width: 70%;
+  }
+  .card1{
+    width: 70%;
+  }
+}
+/* @media screen { 
+  .divNotif{
+      margin: var(--header-height) 0 0 0 0 0 auto;
+        max-width: 85%;
+        width: 960px;
+  }
+} */
+@media screen and (min-width: 768px) {
+  body {
+    padding: 1rem 3rem 0 6rem;
+  }
+  .header {
+    padding: 0 3rem 0 6rem;
+  }
+  .header__container {
+    height: calc(var(--header-height) + .5rem);
+  }
+  .header__search {
+    width: 300px;
+    padding: .55rem .75rem;
+  }
+  .header__toggle {
+    display: none;
+  }
+  .header__logo {
+    display: block;
+  }
+  .header__img {
+    width: 40px;
+    height: 40px;
+    order: 1;
+  }
+  
+}
+/*===== CARD CARD CARD =====*/
+
+.card2 {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 90%;
+  height: 500px;
+  border-radius: 5px;
+  background-color: var(--card-color); 
+  float: center;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  margin-right: 80px;
+  margin-left: 80px;
+  text-align: center;
+}
+
+.card2:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+ .studlistCard {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 2px;
+  text-align: centerd#f1f1f1;
+  border-radius: 5px;
+  transition: 0.3s;
+  margin-left: 10px;
+  background-color: var(--body-color);
+  
+  
+}
+ .studlistCard:hover { box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+.studColumn {
+  float: left;
+  width: 20%;
+  padding: 0 10px;
+}
+
+.studRow {margin: 0 -5px;}
+.studRow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .studColumn {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+/*===== CONTENT CONTENT =====*/
+/* .divHome{
+  margin: var(--header-height) 0 0 0;
+  padding: 1rem 1rem 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: yellow;
+} */
+
+.divNotif{
+  max-width: 85%;
+  width: 960px;
+  margin: 0 auto;
+}
+
+       .dHome{
+      display: flex;
+      padding: 20px;
+      width: 1200px;
+   padding-left: 5px;
+      min-height: 500px;
+      border-radius: 10px;
+      background-color: #FFFFFF;
+      box-shadow:
+        0 9px 33px rgba(0, 0, 0, 0.07);
+      float: center;
+      flex-wrap: row;
+      margin-left: auto;
+ float: center;
+    }
+    </style>
+
+        <title>Follow App Director</title>
+    </head>
+    <body>
+        <!--========== HEADER ==========-->
+        <header class="header">
+            <div class="header__container">
+                <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
+                <a style="font-weight: bold;margin-right:  auto; color: #FFFFFF;  font-family: 'Sawarabi Gothic', serif; 
+                letter-spacing: 2px;" 
+                href="{% url 'student_home_view' %}" class="header__logo">FOLLOW APP</a>
+      <div>
+                       
+                              <p style="font-weight: bold; color: #FFFFFF;"> Registration </p>
+                               
+                                   </div>
+            </div>
+        </header>
+
+
+        <!--========== CONTENTS HOME ==========-->
+          
+            <section id="homie" >
 
 {% block content %} 
 
@@ -17,7 +322,6 @@ Student Info
         <p class="pText"><b class="bText">Last Name: &nbsp;</b>  {{info.lastname}}</p>
         <p class="pText"><b class="bText">studnumber: &nbsp;</b> {{info.studnumber}}</p>
         <p class="pText"><b class="bText">year: &nbsp;</b> {{info.year}}</p>
-        <p class="pText"><b class="bText">degree_program: &nbsp;</b> {{info.degree_program}}</p>  
         <!-- //duha duha ko idiplay ba ni sya -->
         
         <p class="pText"><b class="bText">student_email: &nbsp;</b> {{info.student_email}}</p>
@@ -47,4 +351,13 @@ Student Info
       </div>
 </form>
      
-{% endblock %}
+{% endblock %} 
+       
+               </section>
+            <!-- </div> -->
+
+
+        <!--========== MAIN JS ==========-->
+        <!-- <script src="main.js"></script> -->
+    </body>
+</html>
