--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -228,17 +228,17 @@ cursor: pointer;
 outline: none;
 }
 .fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-  padding: 13px;
-width: 445px;
-height: 45px;
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
@@ -252,48 +252,24 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-margin: auto;
-}
-.facers{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonFed {
-  padding: 13px;
-width: 400px;
-height: 40px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-margin: auto;
-
+  }
+#id_firstname{
+  width: 150px;
 }
 </style>
   <div class="fac">
     <button class="buttonF">Set Schedule for Counseling</button>
   </div> 
 <br>
-<form action="#" class="cleanForm" method="POST">
+
+<div class="card1">
+  <form action="#" class="cleanForm" method="POST">
      
           {% for message in messages %}
-  <center><b>   <p>{{message}} !</p></b></center>
+  <center><b><p>{{message}} !</p></b></center>
      {% endfor %}
 
-     
+     <br>
         <div class="row">     
           <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
           <p class="pText"><b class="bText" >Student's Last Name: &nbsp;</b> {{schedform.lastname}}</p> 
@@ -310,12 +286,10 @@ margin: auto;
           </form>
 
         </div>
-
-
-      
+ 
   </form>
-  <br>
-     <br>  
+
+</div>
 
    
 {% endblock %}
