--- a/templates/student/view_history.html
+++ b/templates/student/view_history.html
@@ -153,18 +153,19 @@ p{
       color: white;
     }
     .fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .buttonF {
-width: 300px;
-height: 55px;
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
-font-size: 18px;
+font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
@@ -176,12 +177,10 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
+  }
 
-}
 
 </style>
-
-
         <div class="fac">
           <button type="submit" class="buttonF">History</button>
         </div> 
@@ -194,12 +193,7 @@ outline: none;
 
 </tr>
 
-{% if not object %}
-<div class="facN">
-  <button  class="buttonN">No Records Yet!</button>
-</div> 
-     <br>
-{% else %}
+
 
 {% for obj in object reversed %}
 {% for couns in counselor %}
@@ -217,6 +211,8 @@ outline: none;
 {% endfor %}
 {% endfor %}
 </table>
+{% if not object %}
+<center><p><b>No Records Yet</b></p></center>
 {% endif %}
 {% endblock %}
 
