--- a/templates/student/viewappointment.html
+++ b/templates/student/viewappointment.html
@@ -145,31 +145,6 @@ Schedule
   #index-gallery{
     width:465px;
   }
-  .fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonF {
-width: 420px;
-height: 55px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
 .Pbox{
   font-size: 19px;
   line-height: 30px;
@@ -182,14 +157,14 @@ outline: none;
  margin-right:20px;
 }
 .row{
-  width: 450px;
+  width: 500px;
  float:right;
  text-align: left;
  text-align: justify;
- 
-
+  flex-direction: column-reverse;
+  padding: 8px;
   margin-left: auto;
-
+ padding: 10px; 
   line-height: 30px;
   
 }
@@ -217,7 +192,7 @@ justify-content: center;
  width: 450px;
  float:left;
 margin-left: 200px;
-padding: 8px;
+padding-top: 17px;
 
 }
 
@@ -229,7 +204,7 @@ padding: 8px;
 .pText{
   font-weight: 600;
   font-size: 20px;
-   color: #454545;
+
 }
 .bText{
   color: #000;
@@ -244,12 +219,41 @@ margin:0 auto;
 form.cleanForm p {
 margin-bottom:15px;
 }
+.fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+
 </style>
 <div class="fac">
   <button type="submit" class="buttonF">Schedule Information</button>
 </div> 
 
-<form action="#" class="cleanForm" method="POST">
+<br>
+<div class="card1">
+  <form action="#" class="cleanForm" method="POST">
 <br>
 {% for message in messages %}
 <center><b><p>{{message}} !</p></b></center>
@@ -262,8 +266,6 @@ src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"
 > 
 <br>
 <p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
-
-
 
 
 <div>
@@ -280,7 +282,7 @@ src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"
 
 </div>
 </div>
-<br> <br> <br> <br> <br> <br> <br> <br> <br> 
+<br> <br> <br> <br> <br> <br>  
 
 <div class="column">
 <div class="row1"> 
@@ -291,6 +293,7 @@ src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"
 </div>
 
 </form>
+</div>
 
        
 {% endblock %}
