--- a/templates/teacher/list_referred_students.html
+++ b/templates/teacher/list_referred_students.html
@@ -124,35 +124,39 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
+
 }
 
 .buttonF {
-  width: 350px;
-  height: 55px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+    position: fixed;
+
+  width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+
   }
 
 
 </style>
-<br>
+
 
 <div class="fac">
   <button type="submit" class="buttonF">Referred Student </button>
 </div> 
-<br>
+<br> <br>
 
 
  <div class="table-wrapper">
@@ -184,7 +188,7 @@
 
     </table>
     {% if not object_list %}
-    <p><b>No Referred Students Yet!</b></p>
+  <center><p style="padding: 10px;"><b>No Referred Students Yet!</b></p></center>
   {% endif %}
   </div>
 
