--- a/templates/teacher/modal.html
+++ b/templates/teacher/modal.html
@@ -154,8 +154,11 @@ justify-content: center;
 }
 
 .buttonF {
-width: 420px;
-height: 55px;
+  position: fixed;
+
+width: 100%;
+min-width: 1320px;
+height: 65px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
@@ -169,6 +172,7 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
+
 }
 .Pbox{
   font-size: 19px;
@@ -186,10 +190,10 @@ outline: none;
  float:right;
  text-align: left;
  text-align: justify;
- 
-
+  flex-direction: column-reverse;
+  padding: 8px;
   margin-left: auto;
-
+ padding: 10px; 
   line-height: 30px;
   
 }
@@ -217,7 +221,6 @@ justify-content: center;
  width: 450px;
  float:left;
 margin-left: 200px;
-padding: 8px;
 
 }
 
@@ -229,7 +232,6 @@ padding: 8px;
 .pText{
   font-weight: 600;
   font-size: 20px;
-   color: #454545;
 }
 .bText{
   color: #000;
@@ -245,57 +247,59 @@ form.cleanForm p {
 margin-bottom:15px;
 }
 </style>
- {% if not object_list %}
-                      No Referred Students yet!
-                  {% endif %}
 
-              {% for object in object_list  reversed %}
-        <div class="fac">
-          <button type="submit" class="buttonF">Students Referral Information</button>
-        </div> 
-        <br>
-<form action="#" class="cleanForm" method="POST">
+{% for object in object_list  reversed %}
 <br>
+<div class="fac">
+  <button type="submit" class="buttonF">Information of Referred Student</button>
+</div> 
+<br> <br>
+{% if not object_list %}
+No Referred Students yet!
+{% endif %}
+<br> 
+<div class="homeCard">
+  <form action="#" class="cleanForm" method="POST">
+    <br>
+    
+    <div class="column">
+    <div class="row">  
+    <img class="image"
+    src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
+    > 
+    <br>
+    <p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
+    <p class="pText"><b class="bText">Student Number: &nbsp;</b>{{object.studnumber}}</p>
+    
+    
+    
+    <div>
+    <p class="rowText">
+    <b>{{object.firstname}}</b> is referred under the subject of <b> {{object.subject_referred}}</b> with a 
+    behavioral problem of <b>{{object.behavior_problem}}</b>
+    </b>Reasons stated below:
+    <div id="box">
+    <li style="font-size: 21px; padding: 10px;"><b> {{object.reasons}}</b></li>
+    </div>
+    </p>
+    </div>
+    
 
-<div class="column">
-<div class="row">  
-<img class="image"
-src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
-> 
-<br>
-<p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
-<p class="pText"><b class="bText">Student Number: &nbsp;</b>{{object.studnumber}}</p>
-
-
-
-<div>
-<p class="rowText">
-<b>{{object.firstname}}</b> is referred under the subject of <b> {{object.subject_referred}}</b> with a 
-behavioral problem of <b>{{object.behavior_problem}}</b>
-</b>Reasons stated below:
-<div id="box">
-<li style="font-size: 21px; padding: 10px;"><b> {{object.reasons}}</b></li>
+    </div>
+    </div>
+    <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+    
+    <div class="column">
+    <div class="row1"> 
+    <p class="pText"><b class="bText">Degree Program: &nbsp;</b>{{object.degree_program}}</p>
+    &nbsp;    &nbsp;   
+    </div>
+    
+    </div>
+    
+    </form>
+    
 </div>
-</p>
-</div>
-
-
-
-</div>
-</div>
- <br> <br> <br> <br> <br> <br> <br> <br>
-
-<div class="column">
-<div class="row1"> 
-<p class="pText"><b class="bText">Degree Program: &nbsp;</b>{{object.degree_program}}</p>
-&nbsp;    &nbsp;   
-</div>
-
-</div>
-
-</form>
-
-
-                 {% endfor %} 
+   {% endfor %}
                
 {% endblock %}
