--- a/templates/teacher/notification.html
+++ b/templates/teacher/notification.html
@@ -162,14 +162,17 @@ p{
     .fac{
 
 display: flex;
-align-items: center;
-justify-content: center;
+align-items: top;
+justify-content: top;
 
 }
 
 .buttonF {
-width: 420px;
-height: 55px;
+    position: fixed;
+  padding: 0 1rem;
+  margin:0px;
+min-width: 1320px;
+height: 60px;
 font-family: 'Roboto', sans-serif;
 font-size: 15px;
 text-transform: uppercase;
@@ -183,47 +186,23 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-}
-.facU{
 
-display: flex;
-align-items: center;
-justify-content: center;
 
 }
 
-.buttonN {
-width: 280px;
-height: 40px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-font-size: 13px;
-}
 
 </style>
-
 
         <div class="fac">
           <button type="submit" class="buttonF">Notifications</button>
         </div> 
 
-<br>
+<br> <br>
+
 
 {% if not notifications %}
-<div class="facU"> 
-  <button class="buttonN">No Notifications Yet!</button>
-</div> 
+
+<center><b><p>No Notifications Yet!</p></b></center>
 
 {% endif %}
 
